# talos-goamd64-v1

./: .gitignore  .tool-versions  Earthfile  build.py  justfile  pyproject.toml
.github/workflows/: build.yaml  on_push.yaml
