[tool.poetry]
name = "talos-goamd64-v1"
version = "0.1.0"
description = ""
authors = ["Joe Lombrozo <joe@djeebus.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
